--- a/nucampsite/aboutus.html
+++ b/nucampsite/aboutus.html
@@ -4,11 +4,15 @@
 <head>
     <!-- Required meta tags always come first -->
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=5" />
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"/>
 
     <!-- Additional CSS must be placed after Bootstrap CSS -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans"/>
     <link rel="stylesheet" href="css/styles.css" />
+
 
     <title>NuCamp: A Better Way To Camp</title>
 </head>
@@ -26,43 +30,37 @@
         </div>
     </header>
 
-    <div>
-        <div>
-            <div>
-               <h2>About Us</h2>
-               <hr />
+    <div class="container">
+        <div class="row row-content">
+            <div class="col">
+                <h2>About Us</h2>
             </div>
         </div>
-    </div>
 
-    <div></div>
         <div class="container">
-            <div class="row row-content align-items-center">
+            <div class="row row-content">
                 <div class="col-sm-6">
-                    <h2 class="text-sm-right">Our Mission</h2>
-                </div>
-                <div class="col">
+                    <h3>Our Mission</h3>
                     <p>We present a curated database of the best campsites in the vast woods and backcountry of the World Wide Web Wilderness. We increase access to adventure for the public while promoting safe and respectful use of resources. The expert wilderness trekkers on our staff personally verify each campsite to make sure that they are up to our standards. We also present a platform for campers to share reviews on campsites they have visited with each other.</p>
                 </div>
             </div>
-    
-            <div class="row row-content align-items-center">
-                <div class="col-sm-4 col-md-3">
-                    <h2>Community Partners</h2>
-                </div>
-                <div class="col">
-                    <h3>Community Partners</h3>
-                    <h4>Bootstrap Outfitters <small>Outdoor Gear Specialists</small></h4>
-                    <p>Bootstrap Outfitters supplies you with the gear you need at prices you can't beat.</p>
-                    <h4>Git Out Expeditions <small>Group Adventure Expeditions</small></h4>
-                    <p>Join Git Out Expeditions to explore new horizons with a group of other adventurers!</p>
-                    <h4>Mongo Fly Shop <small>Your Neighborhood Fly Fishing Shop</small></h4>
-                    <p>Need a new fishing pole, a tacklebox, or flies of all kinds? Stop by Mongo Fly Shop.</p>
-                    <h4>Node Outdoor Apparel <small>Outdoor Clothes & Shoes</small></h4>
-                    <p>From polar fleeces to swimsuits, hiking boots to waders, a visit to Node will be sure to get you covered.</p>
-                </div>
+
+
+        <div>
+            <div>
+                <h3>Community Partners</h3>
+                <h4>Bootstrap Outfitters <small>Outdoor Gear Specialists</small></h4>
+                <p class="d-none d-sm-block ">Bootstrap Outfitters supplies you with the gear you need at prices you can't beat.</p>
+                <h4>Git Out Expeditions <small>Group Adventure Expeditions</small></h4>
+                <p class="d-none d-sm-block "> Join Git Out Expeditions to explore new horizons with a group of other adventurers!</p>
+                <h4>Mongo Fly Shop <small>Your Neighborhood Fly Fishing Shop</small></h4>
+                <p class="d-none d-sm-block "> Need a new fishing pole, a tacklebox, or flies of all kinds? Stop by Mongo Fly Shop.</p>
+                <h4>Node Outdoor Apparel <small>Outdoor Clothes & Shoes</small></h4>
+                <p class="d-none d-sm-block ">From polar fleeces to swimsuits, hiking boots to waders, a visit to Node will be sure to get you covered.</p>
             </div>
         </div>
+    </div>
+    </div>
 
     <footer>
         <div class="container">
@@ -90,6 +88,12 @@
            </div>
         </div>
     </footer>
+
+    <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
+    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
 
 </body>
 
