--- a/nucampsite/index.html
+++ b/nucampsite/index.html
@@ -25,7 +25,24 @@
                 <h2>a better way to camp</h2>
             </div>
         </div>
-    </header>
+    </header> 
+
+    <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
+        <div class="container">
+            <button class="navbar-toggler ml-auto" type="button"
+            data-toggle="collapse" datra-target="#nucampNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button> 
+            <div class="collapse navbar-collapse id="nucampNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link"  href="aboutus.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link"  href="#">Sites</a></li>
+                    <li class="nav-item"><a class="nav-link"  href="#">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <div class="container">
         <div class="row row-content align-items-center">
@@ -34,7 +51,7 @@
             </div>
             <div class="col">
                 <h3>Our Campsites</h3>
-                <p>Explore our growing database of curated campsites and leave your own reviews!</p>
+                <p class="d-none d-sm-block ">Explore our growing database of curated campsites and leave your own reviews!</p>
             </div>
         </div>
 
@@ -44,7 +61,7 @@
             </div>
             <div class="col">
                 <h3>React Lake Campground</h3>
-                <p>Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
+                <p class="d-none d-sm-block ">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
             </div>
         </div>
 
@@ -54,7 +71,7 @@
             </div>
             <div class="col">
                 <h3>Bootstrap Outfitters</h3>
-                <p>Bootstrap Outfitters supplies you with gear you need at prices you can't beat.<p>
+                <p class="d-none d-sm-block ">Bootstrap Outfitters supplies you with gear you need at prices you can't beat.<p>
             </div>
         </div>
     </div>
