--- a/nucampsite/contactus.html
+++ b/nucampsite/contactus.html
@@ -1,20 +1,20 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <!-- Required meta tags always come first -->
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=5" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
 
-    <!-- Additional CSS must be placed after Bootstrap CSS --> 
+    <!-- Additional CSS must be placed after Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
     <link rel="stylesheet" href="css/styles.css" />
-
 
     <title>NuCamp: A Better Way To Camp</title>
 </head>
@@ -28,22 +28,21 @@
                     <h1>NuCamp</h1>
                     <h2>a better way to camp</h2>
                 </div>
-            </div> 
+            </div>
         </div>
     </header>
 
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
-            <button class="navbar-toggler ml-auto" type="button"
-            data-toggle="collapse" datra-target="#nucampNavbar">
+            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#nucampNavbar">
                 <span class="navbar-toggler-icon"></span>
-            </button> 
-            <div class="collapse navbar-collapse id="nucampNavbar">
+            </button>
+            <div class="collapse navbar-collapse" id="nucampNavbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="index-html"><i class="fa fa-home fa-lg">Home</i></a></li>
-                    <li class="nav-item active"><a class="nav-link"  href="#"><i class="fa fa-info fa-lg">About</i></a></li>
-                    <li class="nav-item"><a class="nav-link"  href="#"><i class="fa fa-list fa-lg">Sites</i></a></li>
-                    <li class="nav-item"><a class="nav-link"  href="contactus.html"><i class="fa fa-address-card fa-lg">Contacts</i></a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html"><i class="fa fa-home fa-lg"></i> Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="aboutus.html"><i class="fa fa-info fa-lg"></i> About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Sites</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -54,37 +53,38 @@
             <div class="col">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item active">About</li>
+                    <li class="breadcrumb-item active">Contact</li>
                 </ol>
-                <h2>About Us</h2>
-                </div>
+                <h2>Contact Us</h2>
+                <hr />
             </div>
         </div>
-    </div>
 
-        <div class="container">
-            <div class="row row-content">
-                <div class="col-sm-6">
-                    <h3>Our Mission</h3>
-                    <p>We present a curated database of the best campsites in the vast woods and backcountry of the World Wide Web Wilderness. We increase access to adventure for the public while promoting safe and respectful use of resources. The expert wilderness trekkers on our staff personally verify each campsite to make sure that they are up to our standards. We also present a platform for campers to share reviews on campsites they have visited with each other.</p>
-                </div>
+        <div class="row row-content align-items-center">
+            <div class="col-sm-4">
+                <h5>Our Address</h5>
+                <address>
+                    1 Nucamp Way<br />
+                    Seattle, WA 98001<br />
+                    U.S.A.
+                </address>
             </div>
-
-
-        <div>
-            <div>
-                <h3>Community Partners</h3>
-                <h4>Bootstrap Outfitters <small>Outdoor Gear Specialists</small></h4>
-                <p class="d-none d-sm-block ">Bootstrap Outfitters supplies you with the gear you need at prices you can't beat.</p>
-                <h4>Git Out Expeditions <small>Group Adventure Expeditions</small></h4>
-                <p class="d-none d-sm-block "> Join Git Out Expeditions to explore new horizons with a group of other adventurers!</p>
-                <h4>Mongo Fly Shop <small>Your Neighborhood Fly Fishing Shop</small></h4>
-                <p class="d-none d-sm-block "> Need a new fishing pole, a tacklebox, or flies of all kinds? Stop by Mongo Fly Shop.</p>
-                <h4>Node Outdoor Apparel <small>Outdoor Clothes & Shoes</small></h4>
-                <p class="d-none d-sm-block ">From polar fleeces to swimsuits, hiking boots to waders, a visit to Node will be sure to get you covered.</p>
+            <div class="col">
+				<i class="fa fa-phone"></i> 1-206-555-1234<br>
+            	<i class="fa fa-envelope-o"></i> campsites@nucamp.co
             </div>
         </div>
-    </div>
+
+        <div class="row row-content">
+            <div class="col-12">
+                <h2>Send us your Feedback</h2>
+                <hr />
+            </div>
+            <div class="col-md-10">
+                Form goes here
+            </div>
+       </div>
+
     </div>
 
     <footer>
@@ -94,7 +94,7 @@
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="aboutus.html">About</a></li>
                         <li><a href="#">Sites</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
@@ -118,7 +118,6 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
 
 </body>
 
