--- a/nucampsite/aboutus.html
+++ b/nucampsite/aboutus.html
@@ -22,25 +22,29 @@
 <body>
 
     <header class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <h1>NuCamp</h1>
-                    <h2>a better way to camp</h2>
-                </div>
-            </div> 
+        <div class="row">
+            <div class="col-4 col-sm-3 col-md-2 align-self-center">
+                <a href="index.html">
+                    <img src="img/logo.png" class="img-fluid" />
+                </a>
+            </div>
+            <div class="col">
+                <h1>NuCamp</h1>
+                <h2>a better way to camp</h2>
+            </div>
         </div>
-    </header>
+    </header> 
 
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
-            <button class="navbar-toggler ml-auto" type="button"
+            <a class="navbar-brand" href="index.html"><img src="img/logo.png" height="30" width="30" /></a>
+            <button class="navbar-toggler" type="button"
             data-toggle="collapse" datra-target="#nucampNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button> 
             <div class="collapse navbar-collapse id="nucampNavbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="index-html"><i class="fa fa-home fa-lg">Home</i></a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html"><i class="fa fa-home fa-lg">Home</i></a></li>
                     <li class="nav-item active"><a class="nav-link"  href="#"><i class="fa fa-info fa-lg">About</i></a></li>
                     <li class="nav-item"><a class="nav-link"  href="#"><i class="fa fa-list fa-lg">Sites</i></a></li>
                     <li class="nav-item"><a class="nav-link"  href="contactus.html"><i class="fa fa-address-card fa-lg">Contacts</i></a></li>
