feat: fixing html validation errors

--- a/nucampsite/index.html
+++ b/nucampsite/index.html
@@ -70,13 +70,13 @@
                                 </div>
                             </div>
                             <div class="form-group row">
-                                <label class="col-6 col-form-label" for="campsiteType" >Campsite Type</label>
-                                <div class="col-2 btn-group btn-group-toggle data-toggle="buttons">
-                                    <label class="btn btn-secondary btn-success" active >
-                                        <input type="radio" name="siteType" id="siteTent" autocomplete="off" checked> tent
+                                <label class="col-6 col-form-label" >Campsite Type</label>
+                                <div class="col-2 btn-group btn-group-toggle"  data-toggle="buttons">
+                                    <label class="btn btn-secondary btn-success active" >
+                                        <input type="radio" name="siteType" id="siteTent" checked> tent
                                     </label>
                                     <label class="btn btn-primary">
-                                        <input type="radio" name="siteType" id="siteRV" autocomplete="off"> RV
+                                        <input type="radio" name="siteType" id="siteRV"> RV
                                     </label>
                                 </div>
                             </div>
