feat: left justifying cancel & search

--- a/nucampsite/index.html
+++ b/nucampsite/index.html
@@ -73,7 +73,7 @@
                                 <label class="col-6 col-form-label" >Campsite Type</label>
                                 <div class="col-2 btn-group btn-group-toggle"  data-toggle="buttons">
                                     <label class="btn btn-secondary btn-success active" >
-                                        <input type="radio" name="siteType" id="siteTent" checked> tent
+                                        <input type="radio" name="siteType" id="siteTent" checked> Tent
                                     </label>
                                     <label class="btn btn-primary">
                                         <input type="radio" name="siteType" id="siteRV"> RV
@@ -81,9 +81,10 @@
                                 </div>
                             </div>
                             <div class="row col col-form-label form-group">
-                                <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
-                                <button type="submit" class="btn btn-primary btn-sm ml-1">Search</button>
-                                            
+                                <div class="text-left">
+                                    <button type="button" class="btn btn-secondary btn-sm ml-auto " data-dismiss="modal">Cancel</button>
+                                    <button type="submit" class="btn btn-primary btn-sm ml-1">Search</button>
+                                </div>           
                             </div>
 
                         </form>
