--- a/nucampsite/index.html
+++ b/nucampsite/index.html
@@ -95,7 +95,7 @@
                   </div>
                 </div>
                 <div class="form-group row">
-                  <label class="col-6 col-form-label">Campsite Type</label>
+                  <label class="col-sm-6 col-form-label">Campsite Type</label>
                   <div
                     class="col-2 btn-group btn-group-toggle"
                     data-toggle="buttons"
