--- a/nucampsite/index.html
+++ b/nucampsite/index.html
@@ -319,6 +319,14 @@
               <span class="carousel-control-next-icon"></span>
               <span class="sr-only">Next</span>
             </a>
+            <div class="btn-group" id="carouselButton">
+              <button class="btn btn-danger btn-sm" id="carouselPause">
+                <i class="fa fa-pause"></i>
+              </button>
+              <button class="btn btn-danger btn-sm" id="carouselPlay">
+                <i class="fa fa-play"></i>
+              </button>
+            </div>
           </div>
         </div>
       </div>
@@ -444,7 +452,13 @@
 
     <script>
       $(function () {
-        $('[data-toggle="tooltip"]').tooltip();
+        $(".carousel").carousel({ interval: 2000, pause: "false" });
+        $("#carouselPause").click(function () {
+          $(".carousel").carousel("pause");
+        });
+        $("#carouselPlay").click(function () {
+          $(".carousel").carousel("cycle");
+        });
       });
     </script>
   </body>
