--- a/nucampsite/index.html
+++ b/nucampsite/index.html
@@ -5,16 +5,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Bootstrap CSS -->
+    <!-- build:css css/main.css -->
     <link
       rel="stylesheet"
       href="node_modules/bootstrap/dist/css/bootstrap.min.css"
-    />
-
-    <!-- Additional CSS must be placed after Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="node_modules/bootstrap-social/bootstrap-social.css"
     />
     <link
       rel="stylesheet"
@@ -22,9 +16,14 @@
     />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Lobster%7COpen+Sans"
+      href="node_modules/bootstrap-social/bootstrap-social.css"
     />
     <link rel="stylesheet" href="css/styles.css" />
+    <!-- endbuild -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Lobster%7COpen+Sans"
+    />
 
     <title>NuCamp: A Better Way To Camp</title>
   </head>
@@ -441,10 +440,11 @@
     </footer>
 
     <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
+    <!-- build:js js/main.js -->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
     <script src="js/scripts.js"></script>
+    <!-- endbuild -->
   </body>
 </html>
