feat: adding index.html changes

--- a/nucampsite/index.html
+++ b/nucampsite/index.html
@@ -28,7 +28,7 @@
         <h2>a better way to camp</h2>
       </div>
       <div class="col-md-4 col-xl-2 align-right mt-4">
-        <a role="button" class="btn btn-lg btn-info" id="reserveButton" id="#reserveModal">Reserve Campsite</a>
+        <a role="button" class="btn btn-lg btn-info" id="reserveButton">Reserve Campsite</a>
       </div>
     </div>
   </header>
